--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,14 @@
 .App {
   text-align: center;
+  background: linear-gradient(#58111A, #a71930);
 }
 
-.App-header {
-  background-color: #222;
+/* .App-header {
+  background-color: white;
   height: 150px;
   padding: 20px;
   color: white;
-}
+} */
 
 .App-title {
   font-size: 1.5em;
